libs/extractor/src/snapshots/extractor__tests__responsive_length_token_literal_vs_array-3.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/react'\n        <Box w={[\"$containerX\"]} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "$containerX",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\n((__devupAssignment52) => <div className={__devupAssignment52?.[0] ?? \"\"} style={{ ...__devupAssignment52?.[1] }} />)(((__devupLevel0) => [\n\t__devupLevel0?.[0] ?? \"\",\n\t__devupLevel0?.[1],\n\t[__devupLevel0?.[2]]\n])(((__devupValue) => [\n\t\"OHc6qzz8i9hvx85gw3\",\n\t{},\n\t__devupValue\n])(\"$containerX\")));\n",
}
