libs/extractor/src/snapshots/extractor__tests__responsive_length_token_literal_vs_array-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/react'\n        <Box w={[\"1px\", null, \"$containerX\"]} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "$containerX",
                level: 2,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "1px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\n((__devupAssignment52) => <div className={__devupAssignment52?.[0] ?? \"\"} style={{ ...__devupAssignment52?.[1] }} />)(((__devupLevel0, __devupLevel1, __devupLevel2) => [\n\t`${__devupLevel0?.[0] ?? \"\"} ${__devupLevel1?.[0] ?? \"\"} ${__devupLevel2?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupLevel0?.[1],\n\t\t...__devupLevel1?.[1],\n\t\t...__devupLevel2?.[1]\n\t},\n\t[\n\t\t__devupLevel0?.[2],\n\t\t__devupLevel1?.[2],\n\t\t__devupLevel2?.[2]\n\t]\n])(((__devupValue) => [\n\t\"OLwidth-v1px\",\n\t{},\n\t__devupValue\n])(\"1px\"), ((__devupValue) => [\n\t\"\",\n\t{},\n\t__devupValue\n])(null), ((__devupValue) => [\n\t\"OHa3gjlazyj_xt1ycu\",\n\t{},\n\t__devupValue\n])(\"$containerX\")));\n",
}
