libs/extractor/src/snapshots/extractor__tests__responsive_shadow_token_literal_vs_array-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/react'\n        <Box boxShadow={[\"none\", null, null, \"$card\"]} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "box-shadow",
                value: "$card",
                level: 3,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "box-shadow",
                value: "none",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\n<div className=\"OHdupnrhrb44d8mnoh OHck6y05y1qo279owm\" />;\n",
}
